# rcksett/ignit2021/aulatypescript/aula1/src/modules/accounts/usecase/createUser/UserController.ts
@@ -6,10 +6,10 @@ import { AppError } from "../../../../errors/appError";
 export class UserController {
   async createUser(req: Request, res: Response): Promise<Response> {
     try {
-      const { email, name, username, password, driver_licence } = req.body;
-
+      const { email, name, username, password, driver_licence, avatar } = req.body;
+      
       const createUserUseCase = container.resolve(AccountUsercase);
-      await createUserUseCase.execute({ email, name, username, password, driver_licence });
+      await createUserUseCase.execute({ email, name, username, password, driver_licence, avatar });
 
       return res.status(201).send();
     } catch (error) {
