# rcksett/ignit2021/aulatypescript/aula1/src/routers/AutentiucateRouters.ts
@@ -6,7 +6,7 @@ const routeAutenticate = Router();
 const AuthenticateUser = new AuthenticateUserController()
 const userController = new UserController()
 
-routeAutenticate.post("/sessions", AuthenticateUser.authenticate);
+routeAutenticate.post("/session", AuthenticateUser.authenticate);
 routeAutenticate.post("/users",    userController.createUser);
 
 export  {routeAutenticate};
